--- a/stylesheets/main.sass
+++ b/stylesheets/main.sass
@@ -6,7 +6,7 @@ header
     height: 100vh
     background-size: cover
     background-position: center center
-    margin-bottom: 50px
+    margin-bottom: 30px
 
     // Use flex box for display
     display: flex
@@ -22,13 +22,16 @@ header
     h1
         // pesky whitspace fix
         margin-top: 0
-        padding-top: 30vh
+        padding-top: 10px
+
+        // Font settings
+        font-family: 'Marvel', sans-serif
         font-size: 3em
 
     // Logo
     img
-        width: 128px
-        height: 128px
+        width: 98px
+        height: 98px
 
     // Tagline
     h4
@@ -53,53 +56,55 @@ header
             font-size: 1em
             font-family: 'Oswald', sans-serif
             width: 25%
+// End of header styling
 
 // All h1 and h2 headers should use 'Marvel' font
 h1, h2
     font-family: 'Marvel', sans-serif
 
+hr
+    color: #ddd
+    width: 85%
+
 // Default styles for all sections
 section
     width: 90%
-    margin: 0 auto 10px
+    margin: 20px auto
     text-align: center
+    color: #333
     a, a:hover, a:visited, a:active
         text-decoration: none
-        color: #333
+        color: inherit
     p
         font-family: 'Raleway', sans-serif
+        text-align: justify
+        a
+            text-decoration: underline
+    h2
+        text-align: center
 
-// Default styling for about section
+// Styling for about section
 .about
     img
-        border-radius: 50%
         width: 100px
         height: 100px
 
 // Styling for skills section
-// When user hovers over skill image change text in "skill-info" div
-.skill-01-info, .skill-02-info, .skill-03-info, .skill-04-info
-    display: none
-
-.skill-01:target
-    background: red
-    ~ .skill-01-info
-        display: block
-
-.skill-02:hover
-    background: blue
-    ~ .skill-02-info
-        display: block
-
-.skill-03:hover
-    background: green
-    ~ .skill-03-info
-        display: block
-
-.skill-04:hover
-    background: yellow
-    ~ .skill-04-info
-        display: block
+.skills
+    .skill-images
+        display: flex
+        justify-content: space-around
+        width: 80%
+        margin: 0 auto
+        img
+            width: 48px
+            height: 48px
+            margin: 0px 5px 15px
+    .skill-info
+        margin: 0 auto
+        width: 85%
+        height: 30vh
+        background: #ddd
 
 // Footer styling (should be sticky)
 footer
